# project-puffel-fish

./: .gitignore  CMakeLists.txt  makefile
doc/doxygen-doc/html/: annotated.html  classt3v_1_1software__rasterizer.html  files.html  hierarchy.html
src/: main.cpp
src/engine/: general.cpp
src/engine/objects/2d/: object2d.cpp  object2d.hpp
src/game/: background.cpp  collision.cpp  game.hpp  menu.cpp  player.cpp  timer.cpp  world.cpp
